--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "framer-motion": "^9.0.2",
+    "graphql": "^16.6.0",
     "nanoid": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.2",
     "sass": "^1.58.0"
   },
   "devDependencies": {
